[package]
name = "dungeon_crawler_server"
version = "0.1.0"
authors = ["Christian Schmid <cschmid@pdx.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_serializer = { path = '../crates/simple_serializer/' }
dungeon_generator = { path = '../crates/dungeon_generator/' }
udp_server = { path = '../crates/udp_server/' }
rand  = '0.8.*'
crossbeam = '0.8'