[package]
name = "udp_server"
version = "0.1.0"
authors = ["Christian Schmid <cschmid@pdx.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_serializer = { path = '../simple_serializer/' }
dungeon_generator = { path = '../dungeon_generator/' }
crossbeam = '0.8'
uuid = { version = "0.8.2", features = ["serde", "v4"] }