[package]
name = "rpg_server"
version = "0.1.0"
authors = ["Christian Schmid <cschmid@pdx.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dungeon_generator = { path = '../../dungeon_generator/' }
udp_server = { path = '../udp_server/' }